# g160125-m-pt

./: .gitignore  README.md  pyproject.toml
01 - Core python/Урок 1. Данные и переменные/: examples.py  foo.py  homework.py
01 - Core python/Урок 10. Рекурсия/: exercise_2.py  homework.py  live-coding.py
01 - Core python/Урок 11. Декораторы/: exercise_3.py  homework.py  live-coding.py
01 - Core python/Урок 12.  Модули и пакеты. Библиотеки Random и Math/: exercise_2.py  live-coding.py
01 - Core python/Урок 12. Модули/: homework.py  main.py  math_operation.py
01 - Core python/Урок 14. Работа с файлами/: exercise_1.py  exercise_2.py  homework.py
01 - Core python/Урок 15. Обработка ошибок/: exercise_2.py  homework.py  live-coding.py  Урок 15. Обработка ошибок.pptx
01 - Core python/Урок 16. Генераторы/: homework.py
01 - Core python/Урок 17. Сортировка. Проверка типов. All, any/: exercise_1.py  exercise_2.py  homework.py  live-coding.py
01 - Core python/Урок 18. Сортировка/: exercise_1.py  exercise_2.py  exercise_3.py  homework.py  live-coding.py  Урок 18. Сортировка.pptx
01 - Core python/Урок 19. Библиотеки Data and Time, OS/: examples.py  exercise_1.py  exercise_3.py  homework.py  inventory.json  inventory_copy.json  live-coding.py  Урок 19. Модули  datetime и os.pptx
01 - Core python/Урок 2. Строки/: exercise_1.py  exercise_2.py  homework.py
01 - Core python/Урок 20. Подготовка к собеседованию/: live_coding_tasks.py  questions.txt
01 - Core python/Урок 4. Списки/: homework.py  (+3 more)
tools/: __init__.py  greeting.py
Модуль 3. Advanced Python/: soft_eng.md
(+132 files in other folders)
