[project]
name = "starta"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex M",email = "avm@sh-inc.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "icecream (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
