[project]
name = "starta"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex M",email = "avm@sh-inc.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "icecream (>=2.1.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
